# portfolio-tracker

./: .gitignore  LICENSE  README.md  alpha_vantage_utils.py  config.py  exchange_rates.py  google_sheets_utils.py  main.py  oai_portfolio_analysis.py  package-lock.json  package.json  portfolio_analysis.py  pyproject.toml  requirements.txt  serverless.yml  sls-secrets-plugin.js  utils.py
golang/: AGENTS.md  Makefile  go.mod  go.sum  migrate.go  run.sh  tracker.go
golang/btui/: app.go  keys.go  messages.go  model.go  theme.go
golang/btui/components/: header.go  modal.go  statusbar.go  table.go
golang/btui/forms/: confirm.go  transaction.go
golang/btui/views/: account.go  accounts.go  help.go
golang/cmd/backup/: backup.go
golang/cmd/migration/: migrate.go
golang/cmd/sandbox/: sandbox.go
golang/config/: app.go
golang/docs/: BUBBLETEA_MIGRATION.md
golang/llm/: openai.go  prompt.go
golang/loaders/: accounts.go  market.go  symbols.go  transactions.go
golang/logging/: logger.go
golang/market/: dummy_fetcher.go  fetcher.go  marketstack_fetcher.go  symbols.go  updater.go  updater_test.go
golang/portfolio/: analyzer.go  analyzer_test.go  loader.go  transactions.go
golang/scripts/ralph/: progress.txt  prompt.md  ralph.sh
golang/storage/: db.go
golang/tasks/: prd-llm-portfolio-insights.md  prd.json  progress.txt
golang/tui/: account.go  app.go  keys.go  messages.go  model.go  theme.go
golang/tui/components/: header.go
golang/tui/forms/: transaction.go
golang/tui/views/: account.go  accounts.go  help.go  insights.go
golang/types/: portfolio.go  price.go  structs.go  transactions.go
golang/utils/: clipboard.go  date.go  date_test.go  format.go  id.go
golang/web/: server.go
golang/web/static/: theme.css
golang/web/templates/: account.html  index.html
mobile/ios/tracker/tracker/: ContentView.swift  Item.swift  trackerApp.swift
mobile/ios/tracker/tracker.xcodeproj/: project.pbxproj
mobile/ios/tracker/tracker.xcodeproj/project.xcworkspace/xcuserdata/uzix.xcuserdatad/: UserInterfaceState.xcuserstate
mobile/ios/tracker/trackerTests/: trackerTests.swift
mobile/ios/tracker/trackerUITests/: trackerUITests.swift  trackerUITestsLaunchTests.swift
providers/: __init__.py  alpha_vantage_utils.py
rust/: Cargo.toml  deploy.zsh
rust/templates/: account-transactions.html  accounts-table.html  index.html  new-transaction.html  transactions.html
rust/tracker_analyzer/: Cargo.toml
rust/tracker_analyzer/src/: helpers.rs  lib.rs  portfolio_analyzer.rs
rust/tracker_analyzer/src/store/: cache.rs  ddb.rs  market.rs  mod.rs  tracker_config.rs  user_data.rs
rust/tracker_analyzer/src/types/: account.rs  mod.rs  portfolio.rs  transactions.rs  user_portfolio.rs
rust/tracker_api/: Cargo.toml
rust/tracker_api/src/: filters.rs  main.rs  template_utils.rs
rust/tracker_api/templates/: index.html
rust/tracker_console/: Cargo.toml
rust/tracker_console/src/: main.rs
rust/tracker_storage/: Cargo.toml
rust/tracker_storage/src/: ddb.rs  lib.rs  user_data.rs
rust/tracker_types/: Cargo.toml
scripts/: google_sheets_utils.py  load_to_ddb.py  script_utils.py
tracker/: cache_utils.py  config.py  dynamodb.py  google_sheets_utils.py  models.py  oai_portfolio_analysis.py  portfolio_analysis.py  store.py  utils.py
tracker/handlers/: __init__.py
tracker/providers/: __init__.py  alpha_vantage_utils.py  exchange_rates.py
