[tool.poetry]
name = "tracker"
version = "0.5.0"
description = ""
authors = ["Uzi Refaeli <eluzix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.3"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.93.0"
alpha_vantage = "^2.3.1"
requests = "^2.31.0"
diskcache = "^5.6.1"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
#testcontainers = "3.7.1"
pytest = "7.4.2"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

