[workspace]
resolver = "2"

members = [
    "tracker_analyzer",
    "tracker_api",
    "tracker_console",
]

[workspace.dependencies]
aws-config = "1.5.1"
aws-sdk-dynamodb = "1.34.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
rayon = "1.10.0"
openssl = { version = "0.10.35", features = ["vendored"] }

