[package]
name = "tracker_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_json.workspace = true
once_cell = "1.19.0"
rayon = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono.workspace = true
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }

[features]
default = []
local_creds = []
