[package]
name = "tracker_api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.12.0"

tracker_analyzer = { path = "../tracker_analyzer" }
tokio = { workspace = true, features = ["macros"] }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true }
tera = { workspace = true }
numfmt = { workspace = true }
url = "2.5.2"

[package.metadata.lambda.deploy]
memory = 512                   # Function's memory
timeout = 30                   # Function's execution timeout
role = "arn:aws:iam::838643176316:role/tracker-api-role"         # Function's execution role
#tracing = "active"             # Tracing mode
#env_file = ".env.production"   # File to load environment variables from
#env = { "VAR1" = "VAL1" }      # Additional environment variables
#layers = [ "layer-full-arn" ]  # List of layers to deploy with your function
#tags = { "team" = "lambda" }   # List of AWS resource tags for this function
#s3_bucket = "deploy-bucket"    # S3 bucket to upload the Lambda function to
#include = [ "README.md" ]
