[package]
name = "tracker_console"
version = "0.1.0"
edition = "2021"

[dependencies]
tracker_analyzer = { path = "../tracker_analyzer", features = ["local_creds"] }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }
