[package]
name = "tracker_console"
version = "0.1.0"
edition = "2021"

[dependencies]
tracker_analyzer = { path = "../tracker_analyzer", features = ["local_creds"] }
tracker_api = { path = "../tracker_api" }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rayon = { workspace = true }
reqwest = {workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tera = { workspace = true }
numfmt = { workspace = true }
